# ai-trading-radar

./: .dockerignore  .gitignore  AITradingBot_Setup.sed  AITradingRadar-Windows.spec  AITradingRadar.spec  AITradingRadar_Setup.sed  ANDROID_APP_DESIGN.md  CONTRIBUTING.md  Dockerfile  LICENSE  PACKAGE_README.md  README AI Trading Radar.txt  README.md  README_INSTALL.txt  SERIAL_KEY_GUIDE.txt  Start_MT5_AutoTrading.bat  Start_Paper_AutoTest.bat  TRADINGVIEW_SETUP.txt  _tmp_smoke.py  build_all.bat  build_exe.bat  config.example.json  config_finex.example.json  config_finex_ultra_m1.json  config_v3.example.json  config_xauusd_m1_aggressive.json  config_xauusd_m1_ultra.example.json  docker-compose.yml  file_version_info.txt  generated_serial_keys.txt  installer.iss  open-tradingview-dashboard.bat  optimize_strategy.py  pyproject.toml  release_data.json  report_perf.py  requirements.txt  run-backtest.bat  run-backtest.ps1  run-scalp.bat  (+9 more)
.github/workflows/: ci.yml
aitrader_bot/: __init__.py  ai_trader_client.py  backtest.py  cli.py  config.py  data.py  decision.py  indicators.py  licensing.py  models.py  portfolio.py  position_state.py  research.py  risk.py  scalping.py  strategy.py  updater.py  version.py  walk_forward.py
aitrader_bot/agents/: __init__.py  base.py  chief_trader.py  correlation.py  entry_strategy.py  exit_strategy.py  gemini_sentiment.py  indicator_confirmation.py  integration.py  journal.py  liquidity.py  market_structure.py  (+14 more)
data/: sample_prices.csv  sample_prices_5m.csv  xauusd_5m_1000.csv  xauusd_5m_2000.csv  xauusd_5m_big.csv  xauusd_5m_merged.csv
docs/: RESEARCH_2026-07-11.md  v3.0.0.md
tests/: __init__.py  fake_broker.py  test_core.py  test_dashboard_api.py  test_decision.py  test_fake_broker_integration.py  test_licensing.py  test_live_safety.py  test_position_state.py  test_project_metadata.py  test_research.py  test_services.py  test_v3.py
tools/: make_serial.py  release.py
(+48 files in other folders)
