[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trading-radar"
version = "2.0.0"
description = "Broker-aware algorithmic trading research and execution toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
  { name = "AI Trading Radar contributors" },
]
keywords = ["algorithmic-trading", "backtesting", "metatrader5", "xauusd"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.optional-dependencies]
mt5 = [
  "MetaTrader5==5.0.5735; platform_system == 'Windows'",
]
crypto = [
  "ccxt==4.5.64",
]
alpaca = [
  "alpaca-py==0.43.5",
]
desktop = [
  "PyQt6==6.11.0",
  "pystray==0.19.5",
  "Pillow==12.3.0",
  "win10toast==0.9; platform_system == 'Windows'",
]
telegram = [
  "requests==2.34.2",
]
build = [
  "pyinstaller==6.21.0",
]
all = [
  "MetaTrader5==5.0.5735; platform_system == 'Windows'",
  "ccxt==4.5.64",
  "alpaca-py==0.43.5",
  "PyQt6==6.11.0",
  "pystray==0.19.5",
  "Pillow==12.3.0",
  "win10toast==0.9; platform_system == 'Windows'",
  "requests==2.34.2",
  "pyinstaller==6.21.0",
]

[project.scripts]
ai-trading-bot = "aitrader_bot.cli:main"

[project.urls]
Repository = "https://github.com/dimaslukman-rgb/ai-trading-radar"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["aitrader_bot*"]

[tool.setuptools.package-data]
"aitrader_bot.app" = ["dashboard_template.html"]
